--- a/auto-creamapi/Views/MainView.xaml
+++ b/auto-creamapi/Views/MainView.xaml
@@ -15,135 +15,136 @@
     <views:MvxWpfView.Resources>
         <converters:ListOfDLcToStringNativeConverter x:Key="DlcConv" />
     </views:MvxWpfView.Resources>
-    <Grid IsEnabled="{Binding MainWindowEnabled, Mode=TwoWay}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <wcl:WatermarkTextBox Text="{Binding DllPath}" Watermark="Path to game's steam_api(64).dll..."
-                              Margin="10,10,55,0" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="0"
-                              Grid.Row="0" IsReadOnly="True" IsReadOnlyCaretVisible="True">
-            <!--MouseDoubleClick="{Binding Path=OpenFileCommand}"-->
-            <wcl:WatermarkTextBox.InputBindings>
-                <MouseBinding
-                    Gesture="LeftDoubleClick"
-                    Command="{Binding OpenFileCommand}" />
-            </wcl:WatermarkTextBox.InputBindings>
-        </wcl:WatermarkTextBox>
-        <Button Content="&#xE1A5;" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top"
-                FontFamily="Segoe UI Symbol" Width="40" Command="{Binding OpenFileCommand}" ToolTip="Select DLL file."
-                Grid.Row="0" />
-        <wcl:WatermarkTextBox Text="{Binding GameName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              Margin="10,10,180,0"
-                              Watermark="Game Name" TextWrapping="Wrap" VerticalAlignment="Top" Padding="0"
-                              Grid.Row="1">
-            <wcl:WatermarkTextBox.InputBindings>
-                <KeyBinding
-                    Key="Enter"
-                    Command="{Binding SearchCommand}" />
-            </wcl:WatermarkTextBox.InputBindings>
-        </wcl:WatermarkTextBox>
-        <Button Content="&#xE11A;" HorizontalAlignment="Right" Margin="0,9,135,0" VerticalAlignment="Top"
-                FontFamily="Segoe UI Symbol" Width="40" Command="{Binding SearchCommand}" ToolTip="Find AppID."
-                Grid.Row="1" />
-        <wcl:WatermarkTextBox Text="{Binding AppId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              HorizontalAlignment="Right" Margin="0,10,10,0" Watermark="AppID" TextWrapping="Wrap"
-                              VerticalAlignment="Top" Width="120" Padding="0" Grid.Row="1" />
-        <Grid Grid.Row="2" Margin="10,10,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Margin="0,0,10,0">
-                <Hyperlink Command="{Binding GoToForumThreadCommand}">Search for cs.rin.ru thread...</Hyperlink>
-            </TextBlock>
-            <TextBlock Grid.Column="1" Margin="0,0,0,0">
-                <Hyperlink Command="{Binding GoToSteamdbCommand}">Open SteamDB DLC page...</Hyperlink>
-            </TextBlock>
-        </Grid>
-        <ComboBox ItemsSource="{Binding Path=Languages}" SelectedItem="{Binding Path=Lang, Mode=TwoWay}"
-                  HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Grid.Row="3" />
-        <CheckBox Content="Force offline mode" IsChecked="{Binding Offline, Mode=TwoWay}"
-                  HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" ToolTip="offlinemode"
-                  Grid.Row="4" />
-        <CheckBox Content="Try to bypass game-specific protection"
-                  IsChecked="{Binding ExtraProtection, Mode=TwoWay}" HorizontalAlignment="Left" Margin="10,10,0,0"
-                  VerticalAlignment="Top" ToolTip="extraprotection" Grid.Row="5" />
-        <CheckBox Content="Disable user Interface"
-                  IsChecked="{Binding DisableUserInterface, Mode=TwoWay}" HorizontalAlignment="Left" Margin="10,10,0,0"
-                  VerticalAlignment="Top" ToolTip="disableuserinterface" Grid.Row="6" />
-        <CheckBox Content="Disable user Interface"
-                  IsChecked="{Binding DisableUserInterface, Mode=TwoWay}" HorizontalAlignment="Left" Margin="10,10,0,0"
-                  VerticalAlignment="Top" ToolTip="disableuserinterface" Grid.Row="7" />
-        <wcl:WatermarkTextBox Text="{Binding FilesToHide, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-              Margin="10,10,0,0"
-              Watermark="Files to hide (cream_api.dll is hidden by default)" TextWrapping="Wrap" VerticalAlignment="Top" Padding="0"
-              Grid.Row="7"/>
-        <Grid Margin="10,10,10,0" Grid.Row="8">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_Settings">
+                <MenuItem Header="_Steam API Key..." Command="{Binding OpenApiKeySettingsCommand}" />
+            </MenuItem>
+        </Menu>
+        <Grid IsEnabled="{Binding MainWindowEnabled, Mode=TwoWay}">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <GroupBox Header="DLC" Grid.Row="0" VerticalAlignment="Stretch">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <CheckBox Content="Unlock all DLCs (if possible)"
-                              IsChecked="{Binding UnlockAll, Mode=TwoWay}" HorizontalAlignment="Left"
-                              Margin="10,10,0,0" VerticalAlignment="Top" ToolTip="unlockall" />
-                    <CheckBox Content="Additionally use SteamDB for DLCs"
-                              IsChecked="{Binding UseSteamDb, Mode=TwoWay}" HorizontalAlignment="Left"
-                              Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="1" />
-                    <CheckBox Content="Ignore unknown DLC from SteamDB" IsEnabled="{Binding UseSteamDb}"
-                              IsChecked="{Binding IgnoreUnknown, Mode=TwoWay}" HorizontalAlignment="Left"
-                              Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="2" />
-                    <!-- Text="{Binding Dlcs, Converter={StaticResource DlcConv}, Mode=TwoWay}"-->
-                    <!-- Text="{Binding DlcsString, Mode=TwoWay}"-->
-                    <wcl:WatermarkTextBox
-                        Text="{Binding Dlcs, Converter={StaticResource DlcConv}, Mode=TwoWay}"
-                        Margin="10,10,10,0" Watermark="List of DLCs...&#xA;0000 = DLC Name"
-                        TextWrapping="Wrap" AcceptsReturn="True"
-                        VerticalScrollBarVisibility="Visible" Padding="5,5,5,5"
-                        FontFamily="../resources/#Courier Prime" Grid.Row="3" />
-                    <Button Content="Get DLCs for AppID" Margin="0,10,10,10" Height="19.96" HorizontalAlignment="Right"
-                            VerticalAlignment="Bottom" Width="108" Command="{Binding GetListOfDlcCommand}" Grid.Row="4" />
-                </Grid>
-            </GroupBox>
-            <GroupBox Header="Status" Grid.Row="1" VerticalAlignment="Bottom" IsEnabled="False" Margin="0,10,0,0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <CheckBox Content="CreamAPI DLL applied" Margin="10,10,0,10"
-                              Grid.Column="0" IsChecked="{Binding DllApplied, Mode=TwoWay}" />
-                    <CheckBox Content="CreamAPI Config exists" Margin="10,10,0,10"
-                              Grid.Column="1" IsChecked="{Binding ConfigExists, Mode=TwoWay}" />
-                </Grid>
-            </GroupBox>
+            <wcl:WatermarkTextBox Text="{Binding DllPath}" Watermark="Path to game's steam_api(64).dll..."
+                                  Margin="10,10,55,0" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="0"
+                                  Grid.Row="0" IsReadOnly="True" IsReadOnlyCaretVisible="True">
+                <wcl:WatermarkTextBox.InputBindings>
+                    <MouseBinding
+                        Gesture="LeftDoubleClick"
+                        Command="{Binding OpenFileCommand}" />
+                </wcl:WatermarkTextBox.InputBindings>
+            </wcl:WatermarkTextBox>
+            <Button Content="&#xE1A5;" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top"
+                    FontFamily="Segoe UI Symbol" Width="40" Command="{Binding OpenFileCommand}" ToolTip="Select DLL file."
+                    Grid.Row="0" />
+            <wcl:WatermarkTextBox Text="{Binding GameName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                  Margin="10,10,180,0"
+                                  Watermark="Game Name" TextWrapping="Wrap" VerticalAlignment="Top" Padding="0"
+                                  Grid.Row="1">
+                <wcl:WatermarkTextBox.InputBindings>
+                    <KeyBinding
+                        Key="Enter"
+                        Command="{Binding SearchCommand}" />
+                </wcl:WatermarkTextBox.InputBindings>
+            </wcl:WatermarkTextBox>
+            <Button Content="&#xE11A;" HorizontalAlignment="Right" Margin="0,9,135,0" VerticalAlignment="Top"
+                    FontFamily="Segoe UI Symbol" Width="40" Command="{Binding SearchCommand}" ToolTip="Find AppID."
+                    Grid.Row="1" />
+            <wcl:WatermarkTextBox Text="{Binding AppId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                  HorizontalAlignment="Right" Margin="0,10,10,0" Watermark="AppID" TextWrapping="Wrap"
+                                  VerticalAlignment="Top" Width="120" Padding="0" Grid.Row="1" />
+            <Grid Grid.Row="2" Margin="10,10,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Margin="0,0,10,0">
+                    <Hyperlink Command="{Binding GoToForumThreadCommand}">Search for cs.rin.ru thread...</Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Column="1" Margin="0,0,0,0">
+                    <Hyperlink Command="{Binding GoToSteamdbCommand}">Open SteamDB DLC page...</Hyperlink>
+                </TextBlock>
+            </Grid>
+            <ComboBox ItemsSource="{Binding Path=Languages}" SelectedItem="{Binding Path=Lang, Mode=TwoWay}"
+                      HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Grid.Row="3" />
+            <CheckBox Content="Force offline mode" IsChecked="{Binding Offline, Mode=TwoWay}"
+                      HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" ToolTip="offlinemode"
+                      Grid.Row="4" />
+            <CheckBox Content="Try to bypass game-specific protection"
+                      IsChecked="{Binding ExtraProtection, Mode=TwoWay}" HorizontalAlignment="Left" Margin="10,10,0,0"
+                      VerticalAlignment="Top" ToolTip="extraprotection" Grid.Row="5" />
+            <CheckBox Content="Disable user Interface"
+                      IsChecked="{Binding DisableUserInterface, Mode=TwoWay}" HorizontalAlignment="Left" Margin="10,10,0,0"
+                      VerticalAlignment="Top" ToolTip="disableuserinterface" Grid.Row="6" />
+            <wcl:WatermarkTextBox Text="{Binding FilesToHide, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                  Margin="10,10,0,0"
+                  Watermark="Files to hide (cream_api.dll is hidden by default)" TextWrapping="Wrap" VerticalAlignment="Top" Padding="0"
+                  Grid.Row="7"/>
+            <Grid Margin="10,10,10,0" Grid.Row="8">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <GroupBox Header="DLC" Grid.Row="0" VerticalAlignment="Stretch">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <CheckBox Content="Unlock all DLCs (if possible)"
+                                  IsChecked="{Binding UnlockAll, Mode=TwoWay}" HorizontalAlignment="Left"
+                                  Margin="10,10,0,0" VerticalAlignment="Top" ToolTip="unlockall" />
+                        <CheckBox Content="Additionally use SteamDB for DLCs"
+                                  IsChecked="{Binding UseSteamDb, Mode=TwoWay}" HorizontalAlignment="Left"
+                                  Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="1" />
+                        <CheckBox Content="Ignore unknown DLC from SteamDB" IsEnabled="{Binding UseSteamDb}"
+                                  IsChecked="{Binding IgnoreUnknown, Mode=TwoWay}" HorizontalAlignment="Left"
+                                  Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="2" />
+                        <wcl:WatermarkTextBox
+                            Text="{Binding Dlcs, Converter={StaticResource DlcConv}, Mode=TwoWay}"
+                            Margin="10,10,10,0" Watermark="List of DLCs...&#xA;0000 = DLC Name"
+                            TextWrapping="Wrap" AcceptsReturn="True"
+                            VerticalScrollBarVisibility="Visible" Padding="5,5,5,5"
+                            FontFamily="../resources/#Courier Prime" Grid.Row="3" />
+                        <Button Content="Get DLCs for AppID" Margin="0,10,10,10" Height="19.96" HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom" Width="108" Command="{Binding GetListOfDlcCommand}" Grid.Row="4" />
+                    </Grid>
+                </GroupBox>
+                <GroupBox Header="Status" Grid.Row="1" VerticalAlignment="Bottom" IsEnabled="False" Margin="0,10,0,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <CheckBox Content="CreamAPI DLL applied" Margin="10,10,0,10"
+                                  Grid.Column="0" IsChecked="{Binding DllApplied, Mode=TwoWay}" />
+                        <CheckBox Content="CreamAPI Config exists" Margin="10,10,0,10"
+                                  Grid.Column="1" IsChecked="{Binding ConfigExists, Mode=TwoWay}" />
+                    </Grid>
+                </GroupBox>
+            </Grid>
+            <Button Content="Save" Command="{Binding SaveCommand}" Margin="0,10,55,10" HorizontalAlignment="Right"
+                    Width="40" Height="20" VerticalAlignment="Bottom" Grid.Row="9" />
+            <Button Content="Reset" Command="{Binding ResetFormCommand}" Margin="0,10,10,10" Height="20"
+                    VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="40" Grid.Row="9" />
+            <StatusBar Grid.Row="10">
+                <StatusBarItem Height="30" Margin="0,0,0,0">
+                    <TextBlock Text="{Binding Status, Mode=TwoWay}" />
+                </StatusBarItem>
+            </StatusBar>
         </Grid>
-        <Button Content="Save" Command="{Binding SaveCommand}" Margin="0,10,55,10" HorizontalAlignment="Right"
-                Width="40" Height="20" VerticalAlignment="Bottom" Grid.Row="9" />
-        <Button Content="Reset" Command="{Binding ResetFormCommand}" Margin="0,10,10,10" Height="20"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="40" Grid.Row="9" />
-        <StatusBar Grid.Row="10">
-            <StatusBarItem Height="30" Margin="0,0,0,0">
-                <TextBlock Text="{Binding Status, Mode=TwoWay}" />
-            </StatusBarItem>
-        </StatusBar>
-    </Grid>
+    </DockPanel>
 </views:MvxWpfView>
