--- a/auto-creamapi/Views/ApiKeyView.xaml
+++ b/auto-creamapi/Views/ApiKeyView.xaml
@@ -8,9 +8,9 @@
                  d:DataContext="{d:DesignInstance Type=viewModels:ApiKeyViewModel}"
                  mc:Ignorable="d"
                  Title="{Binding WindowTitle}" 
-                 Width="500" Height="280" 
-                 MinWidth="500" MinHeight="280"
-                 MaxWidth="500" MaxHeight="280"
+                 Width="550" Height="430" 
+                 MinWidth="550" MinHeight="430"
+                 MaxWidth="550" MaxHeight="430"
                  WindowStartupLocation="CenterScreen"
                  ResizeMode="NoResize">
     <Grid Margin="20">
@@ -30,7 +30,7 @@
             <Run>Auto-CreamAPI requires a Steam Web API key to fetch the list of games and DLCs.</Run>
         </TextBlock>
 
-        <TextBlock Grid.Row="1" TextWrapping="Wrap" Margin="0,0,0,10">
+        <TextBlock Grid.Row="1" TextWrapping="Wrap" Margin="0,0,0,15">
             <Run>To get your API key:</Run>
             <LineBreak />
             <Run>1. Click the button below to open the Steam API key page</Run>
@@ -45,36 +45,27 @@
         <Button Grid.Row="2" 
                 Content="Open Steam API Key Registration Page" 
                 Command="{Binding OpenWebsiteCommand}"
-                Margin="0,0,0,15"
-                Padding="10,5"
-                HorizontalAlignment="Left" />
+                Margin="0,0,0,20"
+                Padding="10,8"
+                HorizontalAlignment="Stretch" />
 
-        <TextBox Grid.Row="3" 
+        <TextBlock Grid.Row="3" 
+                   Text="Paste your Steam API key here:"
+                   Margin="0,0,0,5"
+                   FontWeight="SemiBold" />
+
+        <TextBox Grid.Row="4" 
                  Text="{Binding ApiKey, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                 Margin="0,0,0,15"
-                 Padding="5"
+                 Margin="0,0,0,20"
+                 Padding="8"
                  FontFamily="Consolas"
-                 ToolTip="Paste your Steam Web API key here">
-            <TextBox.Style>
-                <Style TargetType="TextBox">
-                    <Style.Triggers>
-                        <Trigger Property="Text" Value="">
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <VisualBrush Stretch="None" AlignmentX="Left">
-                                        <VisualBrush.Visual>
-                                            <TextBlock Text="Paste your Steam API key here..." 
-                                                       Foreground="LightGray" 
-                                                       Margin="5,0,0,0"/>
-                                        </VisualBrush.Visual>
-                                    </VisualBrush>
-                                </Setter.Value>
-                            </Setter>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBox.Style>
-        </TextBox>
+                 FontSize="13"
+                 VerticalScrollBarVisibility="Auto"
+                 TextWrapping="Wrap"
+                 AcceptsReturn="False"
+                 VerticalAlignment="Stretch"
+                 VerticalContentAlignment="Center"
+                 ToolTip="Paste your Steam Web API key here" />
 
         <StackPanel Grid.Row="5" 
                     Orientation="Horizontal" 
@@ -84,12 +75,12 @@
                     IsDefault="True"
                     Width="80" 
                     Margin="0,0,10,0"
-                    Padding="10,5" />
+                    Padding="10,8" />
             <Button Content="Cancel" 
                     Command="{Binding CancelCommand}"
                     IsCancel="True"
                     Width="80"
-                    Padding="10,5"
+                    Padding="10,8"
                     IsEnabled="{Binding CanCancel}" />
         </StackPanel>
     </Grid>
